[gd_scene load_steps=5 format=3 uid="uid://cqb0bquefh0ub"]

[ext_resource type="Script" path="res://scripts/antifood_bacterium.gd" id="1_6rjnx"]
[ext_resource type="Texture2D" uid="uid://d27ikbwq506w" path="res://icon.svg" id="2_csdwn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_q2uvk"]
radius = 33.0606

[sub_resource type="CircleShape2D" id="CircleShape2D_168w3"]

[node name="antifood_bacterium" type="RigidBody2D" groups=["antifood_bacterium", "food"]]
gravity_scale = 0.0
lock_rotation = true
linear_damp = 6.24
angular_damp = 100.0
script = ExtResource("1_6rjnx")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.46875, 0.46875)
texture = ExtResource("2_csdwn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_q2uvk")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(10, 10)
shape = SubResource("CircleShape2D_168w3")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
